--- a/hackuta/package.json
+++ b/hackuta/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-flow": "^7.25.7",
+    "@babel/plugin-transform-react-jsx": "^7.25.7",
+    "@firebase/app": "^0.10.12",
+    "@firebase/app-types": "^0.9.2",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
