--- a/hackuta/package.json
+++ b/hackuta/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.25.7",
     "@babel/plugin-syntax-flow": "^7.25.7",
     "@babel/plugin-transform-react-jsx": "^7.25.7",
     "@firebase/app": "^0.10.12",
